set iron version

--- a/mappers/Cargo.toml
+++ b/mappers/Cargo.toml
@@ -8,8 +8,8 @@ num = "0.1"
 num-traits = "0.1"
 typemap = "0.3"
 params = "0.6.0"
-iron = "*"
-router = "*"
+iron = "0.5.1"
+router = "0.5.1"
 image = "0.10.4"
 chrono = "0.2"
 colorizers = {path = "../colorizers"}
