Load configuration of data directory and port from config file
added dependency config-rs

Adjusted MappersHandler and GdalSource to use runtime String

Added sample config file

--- a/mappers/Cargo.toml
+++ b/mappers/Cargo.toml
@@ -14,3 +14,4 @@ image = "0.10.4"
 chrono = "0.2"
 colorizers = {path = "../colorizers"}
 gdal =  {git = "https://github.com/georust/rust-gdal.git"}
+config = "0.2"
