--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,12 @@ dist: trusty
 before_install:
   - sudo add-apt-repository ppa:ubuntugis/ppa -y
   - sudo apt-get update -q
+  - sudo apt-get install -y libgdal-dev libgdal20
 
 addons:
  apt:
   packages:
     - build-essential
-    - libgdal-dev
-    - libgdal20
 
 rust:
   - stable
