--- a/mappers/Cargo.toml
+++ b/mappers/Cargo.toml
@@ -7,15 +7,15 @@ authors = ["Johannes Drönner <droenner@informatik.uni-marburg.de>"]
 num = "0.1"
 num-traits = "0.1"
 typemap = "0.3"
-params = "0.6.0"
-iron = "0.5.1"
-router = "0.5.1"
-image = "0.10.4"
-chrono = "0.2"
+image = "0.17"
+chrono = "0.4"
 colorizers = {path = "../colorizers"}
 gdal =  {git = "https://github.com/georust/rust-gdal.git"}
-config = "0.2"
-serde = "0.9"
-serde_derive = "0.9"
-serde_json = "0.9"
-error-chain = "0.7.2"
+config = "0.7"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+error-chain = "0.11"
+futures = "0.1.14"
+hyper = "0.11.2"
+url = "1.6"
