--- a/mappers/Cargo.toml
+++ b/mappers/Cargo.toml
@@ -15,7 +15,7 @@ config = "0.7"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-error-chain = "0.11"
+failure = "*"
 futures = "0.1.14"
 hyper = "0.11.2"
 url = "1.6"
